--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -35,6 +35,11 @@ repository:
   # rebase-merging.
   allow_rebase_merge: true
 
+# Collaborators: give specific users access to this repository.
+collaborators:
+  - username: phazonoverload
+    permission: push
+
 # Labels: define labels for Issues and Pull Requests
 labels:
   - name: help
@@ -52,7 +57,3 @@ labels:
   - name: MODULE-6
   - name: submission
     color: 00CCCC
-    
-collaborators:
-  - username: phazonoverload
-    permission: admin
